welcome.lessons.welcome.array.search.IndexOfValue.scala.error
indexOfValue:6: error: not found: value break
      break;
      ^